Migrate from ProtocolLib to PacketEvents
BREAKING CHANGE: Replace ProtocolLib dependency with packetevents-spigot 2.11.1.
All packet handling has been rewritten to use the PacketEvents API.